check validity for more than 1000 entries

--- a/.internal_Documentation/(.js, node.js .cds).md
+++ b/.internal_Documentation/(.js, node.js .cds).md
@@ -66,3 +66,25 @@ onExport: function () {
                 };
                 XLSX.writeFile(oWorkbook, sFileName);
             },
+
+
+#### check validity for more than 1000 entries ( entris ipunted from csv)
+let distinctPositions = [...new Set(aFile.map(x => x[0]))];
+                let batchSize = 1000; // model.read() gives max 1000 rows as a response so this is the max we can check
+                // we will seperate distinctPositions in batches and filter AnagraficaPosizioni in parts
+                let promises = [];
+                for (let i = 0; i < distinctPositions.length; i += batchSize) {
+                    let disPosBatch = distinctPositions.slice(i, i + batchSize);
+                    let aFilters = disPosBatch.map(function (x) {
+                        return new Filter("IdPosizione", FilterOperator.EQ, x);
+                    });
+                    promises.push(this.apiGet(oModel, '/AnagraficaPosizioni', aFilters));
+                }
+
+                let results = await Promise.all(promises);
+                let validPos = results.flat().map(x => x.IdPosizione)
+
+                if (validPos.length !== distinctPositions.length) {
+                    let set = new Set(validPos);
+                    aFile = aFile.filter(x => set.has(x[0]));
+                }
